--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,12 @@
             <version>1.0.2</version>
             <type>jar</type>
         </dependency>
+        <dependency>
+            <groupId>org.glassfish</groupId>
+            <artifactId>jakarta.faces</artifactId>
+            <version>4.1.0-M1</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
     
     <build>
